# hft-backtest

./: .gitignore  Cargo.toml  README.md
documentation/: #challenge_report.lyx#  challenge_report.lyx
python/: README.md  exercise.ipynb  pyproject.toml
python/scripts/: download_data.py  run_backtest.py
python/scripts/helper/: helper.py
python/scripts/latency/: latency.py
python/scripts/metrics/: market_imbalance.py
python/scripts/strategy/: market_imbalance.py  risk_manager.py
python/tests/: test_download_data.py  test_market_imbalance.py  test_run_backtest.py
rust/: Cargo.toml
rust/src/: main.rs
rust/src/backtest/: backtest_preparation.rs  mod.rs
rust/src/strategy/: mod.rs  roundabout_strategy.rs  strategy.rs
