[package]
name = "hft-backtest"
version = "0.1.0"
edition = "2021"

[features]
default = ["backtest", "binancefutures"]
backtest = ["zip", "uuid", "nom"]
use_reqwest = ["reqwest"]
binancefutures = ["serde", "serde_json", "tokio-tungstenite", "use_reqwest", "sha2", "hmac", "rand"]
unstable_fuse = []

[dependencies]
tracing = "0.1.40"
anyhow = "1.0.79"
thiserror = "1.0.57"
dyn-clone = "1.0.17"
bincode = "2.0.0-rc.3"
chrono = { version = "0.4.33", optional = true }
serde = { version = "1.0.196", features = ["derive"], optional = true }
serde_json = { version = "1.0.113", optional = true }
tokio = { version = "1.35.1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"], optional = true }
reqwest = { version = "0.12.3", default-features = false, features = ["json", "rustls-tls-native-roots"], optional = true }
zip = { version = "2.1.3", optional = true }
futures-util = { version = "0.3.30", optional = true }
sha2 = { version = "0.11.0-pre.3", optional = true }
hmac = { version = "0.13.0-pre.3", optional = true }
rand = { version = "0.8.5", optional = true }
uuid = { version = "1.8.0", features = ["v4"], optional = true }
nom = { version = "7.1.3", optional = true }
hftbacktest = { version = "0.4.0", features = ["backtest","hftbacktest-derive"] }
tracing-subscriber = "0.3"
log = "0.4.22"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = [] }
clap = { version = "4.5.4", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
